[workspace]
members = [
    "fydia",
    "fydia-router",
    "fydia-sql",
    "fydia-struct",
    "fydia-utils",
    "fydia-config",
    "fydia-crypto",
    "fydia-dispatcher",
]

[profile.release]
codegen-units = 256
panic = 'abort'
lto = "thin"
opt-level = 3

[profile.dev]
incremental = true
lto = false
codegen-units = 256
debug = 1