[workspace]
members = [
    "fydia",
    "fydia-router",
    "fydia-sql",
    "fydia-struct",
    "fydia-utils",
    "fydia-config",
    "fydia-crypto",
    "fydia-dispatcher",
    "fydia-libtest",
]

[profile.release]
panic = 'abort'
lto = "thin"
opt-level = 3
incremental = false

[profile.dev]
incremental = true
lto = false
debug = 1
