[package]
name = "fydia-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
crossbeam = "0.8.1"
egui = "0.13.1"
eframe = "0.13.1"
tokio = { version="1.8.1", features=["full"] }
fydia-struct = { path="../fydia-struct" }
tokio-tungstenite = "0.14.0"
futures-util = { version="0.3.15", default-features=false, features=["async-await", "sink", "std"] }
futures-channel = "0.3"
serde = "1.0.126"
serde_json = "1.0.64"
