[package]
name = "fydia-dispatcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", default-features = false, features = [
    "rt",
    "macros",
] }
serde_json = "1.0.79"
serde = "1.0.136"
reqwest = "0.11.10"
fydia-struct = { path = "../fydia-struct" }
fydia-utils = { path = "../fydia-utils" }
fydia-crypto = { path = "../fydia-crypto" }
http = "0.2.7"
