[package]
name = "fydia-dispatcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", default-features = false, features = [
    "rt",
    "macros",
] }
reqwest = "0.11.18"
fydia-struct = { path = "../fydia-struct" }
fydia-utils = { path = "../fydia-utils" }
fydia-crypto = { path = "../fydia-crypto" }
