[package]
name = "fydia-libtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = { version = "1.18.2", features = [
    "macros",
    "rt",
], default-features = false }

[dependencies]
toml = "0.5.9"
serde_json = "1.0.81"
serde = "1.0.137"
reqwest = "0.11.10"
log = "0.4.17"
