[package]
name = "fydia-router"
version = "0.0.1"
edition = "2018"

[features]
flutter_client = ["rust-embed"]
sample = ["fydia-sql/sample"]

[dependencies]
fydia-config = { path = "../fydia-config" }
fydia-struct = { path = "../fydia-struct" }
fydia-sql = { path = "../fydia-sql" }
fydia-utils = { path = "../fydia-utils" }
fydia-crypto = { path = "../fydia-crypto" }
fydia-dispatcher = { path = "../fydia-dispatcher" }
tokio = { version = "1.25.0", default-features = false }
futures = "0.3.26"
chrono = "0.4.23"
axum = { version = "0.6.10", features = ["ws", "headers"] }
log = "0.4.17"
mime = "0.3.16"
multer = "2.0.4"
infer = "0.12.0"
mime_guess = "2.0.4"
tracing = "0.1.37"
tower-http = { version = "0.4.0", features = ["trace"] }
tower = "0.4.13"
parking_lot = { version = "0.12.1" }
flume = "0.10.14"
rust-embed = { version = "6.4.2", optional = true }
axum-macros = { version ="0.3.4"}

[dev-dependencies]
env_logger = "0.10.0"
