[package]
name = "fydia-sql"
version = "0.1.0"
edition = "2018"

[dependencies]
fydia-config = { path = "../fydia-config" }
fydia-crypto = { path = "../fydia-crypto" }
fydia-struct = { path = "../fydia-struct" }
fydia-utils = { path = "../fydia-utils" }
log = "0.4.16"

sea-orm = { git = "https://github.com/rheydskey/sea-orm", default-features = false, features = [
    "sqlx-mysql",
    #"sqlx-postgres",
    #"sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

tokio = { version = "1.21.1", default-features = false, features = [
    "rt",
    "macros",
] }

entity = { path = "entity" }
migration = { path = "migration" }
