[package]
name = "fydia-sql"
version = "0.1.0"
edition = "2018"

[features]
sample = []

[dependencies]
fydia-config = { path = "../fydia-config" }
fydia-crypto = { path = "../fydia-crypto" }
fydia-struct = { path = "../fydia-struct" }
fydia-utils = { path = "../fydia-utils" }
shared = { path = "./shared" }
log = "0.4.20"

tokio = { version = "1.28.2", default-features = false, features = [
    "rt",
    "macros",
] }

entity = { path = "entity" }
migration = { path = "migration" }
thiserror = "1.0.40"