[package]
name = "fydia-struct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
axum = { version = "0.5.11", features = ["headers"] }
chrono = "0.4.19"
futures = "0.3.21"
fydia-crypto = { path = "../fydia-crypto" }
fydia-utils = { path = "../fydia-utils" }
log = "0.4.17"
mime = "0.3.16"
url = "2.2.2"
tokio = { version = "1.19.2", default-features = false }
