[package]
name = "fydia-struct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["headers"] }
chrono = "0.4.23"
futures = "0.3.26"
fydia-crypto = { path = "../fydia-crypto" }
fydia-utils = { path = "../fydia-utils" }
log = "0.4.17"
mime = "0.3.16"
url = "2.3.1"
tokio = { version = "1.25.0", default-features = false }
