[package]
name = "fydia-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", default-features = false, features=["rt", "macros"]}
fydia-utils = { path = "../fydia-utils" }
reqwest = { version = "0.11", features = ["json"] }
