[package]
name = "fydia-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.94"
http = "0.2.8"
async-trait = "0.1.67"
