[package]
name = "fydia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
flutter_client = ["fydia-router/flutter_client"]


[dependencies]
axum = "0.5.1"
tokio = { version = "1.18.0", default-features = false, features = [
    "rt",
    "macros",
] }
reqwest = "0.11.10"
fydia-router = { path = "../fydia-router" }
fydia-config = { path = "../fydia-config" }
log = "0.4.0"
pretty_env_logger = "0.4"
chrono = "0.4.19"
