[package]
name = "fydia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
flutter_client = ["fydia-router/flutter_client"]
sample = ["fydia-router/sample"]

[dependencies]
axum = "0.6.18"
tokio = { version = "1.26.0", default-features = false, features = [
    "rt",
    "macros",
] }
fydia-router = { path = "../fydia-router" }
fydia-config = { path = "../fydia-config" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
chrono = "0.4.24"
