[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.8.0", default-features = false, features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

fydia-struct = { path = "../../fydia-struct" }
fydia-utils = { path = "../../fydia-utils" }
