[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { git = "https://github.com/fydia/sea-orm", default-features = false, features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono"
] }

fydia-struct = { path = "../../fydia-struct" }
fydia-utils = { path = "../../fydia-utils" }
